--- a/src/components/content/Content.css
+++ b/src/components/content/Content.css
@@ -19,7 +19,6 @@
 
 .button {
     padding: 10px 20px;
-    margin-left: 20px;
     background-color: #009879;
     color: white;
     border: none;
